nesc-frontend/src/test/resources/integration/programs/good/good05/M.nc
generic module M(typedef T, char name[], int size)
{
}
implementation
{
   void f()
   {
      T n;
      int m = size * 2;
   }
}
