nesc-frontend/src/test/resources/integration/programs/bad/bad28/M.nc
generic module M(typedef T, int size)
{
   provides command void c();
}
implementation
{
   static int counter;

   command void c()
   {
      ++counter;
   }
}
